set up models, factories, seeders, migrations and controller for roles & users

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7ee0b2bf52e7c4c373b7",
+    "/css/app.css": "/css/app.css?id=265f79ef79222ace80f5"
 }
